fixed image alignment

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .menu-screen {
-    height:100vh;
+    height: 100vh;
     width: 100%;
     padding: 80px;
     position: fixed;
@@ -168,7 +168,7 @@ li:hover {
     width: auto;
     margin-bottom: 100px;
     display: flex;
-    padding-bottom: 50vh;
+    padding-bottom: 20vh;
     align-items: center;
     justify-content: center;
     border-radius: 20px;
@@ -321,7 +321,7 @@ h2 {
     grid-gap: 10px;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(14, 1fr);
-    grid-template-areas: 
+    grid-template-areas:
         "men women women"
         "m-s w-s ."
         "m-s w-s w-sm"
@@ -345,7 +345,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(14,1fr);
-    grid-template-areas: 
+    grid-template-areas:
         "us inches"
         "chart chart"
         "chart chart"
